--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -195,9 +195,11 @@ $('.add-parent').on('click','.remove_fields',function(){
   	user_specific_classrooms = <%=@user_specific_classrooms%>
   	school_specific_classrooms = <%=@school_classrooms%>
   	
+  	
   	//alert(jQuery.isArray(user_specific_classrooms));
   	if(school_user_specific_classrooms.length >0)
   	{
+  		//alert("LHS====="+school_user_specific_classrooms);
   	  $.each( school_user_specific_classrooms, function( key, value ) {
         $("#already_assigned_id option[value='"+value+"']").removeAttr("selected").addClass('hide');
         $('.left-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").addClass('hide');
@@ -205,13 +207,15 @@ $('.add-parent').on('click','.remove_fields',function(){
  	}
  	else
  	{	
+ 		//alert("LHS====="+school_specific_classrooms);
  		$.each( school_specific_classrooms, function( key, value ) {
-        $("#already_assigned_id option[value='"+value+"']").removeAttr("selected").addClass('hide');
-        $('.left-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").addClass('hide');
+        $("#already_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('hide').addClass('show');
+        $('.left-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").removeClass('hide').addClass('show');
       });
  	}
  	if(user_specific_classrooms.length > 0)
   	{
+  		//alert("RHS====="+user_specific_classrooms);
   	  $.each( user_specific_classrooms, function( key, value ) {
        $("#all_present_id option[value='"+value+"']").removeAttr("selected").addClass('hide');
        $('.right-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").addClass('hide');
