changes in multi select

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -162,10 +162,20 @@ $(document).ready(function() {
   }
   else
   {	
-    $.each( school_specific_teachers, function( key, value ) {
- 	  $("#already_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('hide').addClass('show');
-      $('.left-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").removeClass('hide').addClass('show');
-    });
+    if(<%= action_name.eql?('edit') || action_name.eql?('update')%>)  
+    {
+      $.each( school_specific_teachers, function( key, value ) {
+ 	      $("#already_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('hide').addClass('show');
+        $('.left-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").removeClass('hide').addClass('show');
+      });
+    }
+    else
+    {
+      $.each( school_specific_teachers, function( key, value ) {
+        $("#already_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('show').addClass('hide');
+        $('.left-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").removeClass('show').addClass('hide');
+      });
+    }
   }
   if(class_specific_teachers.length > 0)
   {
@@ -270,10 +280,20 @@ $(document).ready(function() {
  	}
  	else
  	{	
- 		$.each( school_specific_students, function( key, value ) {
- 		$("#student_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('hide').addClass('show');
+    if(<%= action_name.eql?('edit') || action_name.eql?('update')%>)  
+    {
+ 		  $.each( school_specific_students, function( key, value ) {
+ 		    $("#student_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('hide').addClass('show');
         $('.left-stud-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").removeClass('hide').addClass('show');
       });
+    }
+    else
+    {
+      $.each( school_specific_students, function( key, value ) {
+        $("#student_assigned_id option[value='"+value+"']").removeAttr("selected").removeClass('show').addClass('hide');
+        $('.left-stud-listbox .lbjs-item[user_id='+value+']').removeAttr("selected").removeClass('show').addClass('hide');
+      });
+    }
  	}
  	if(class_specific_students.length > 0)
   	{
