--- a/app/views/licenses/_licenses_info.html.erb
+++ b/app/views/licenses/_licenses_info.html.erb
@@ -28,18 +28,17 @@
 						            <%= link_to '<i title="Edit License" class="fa fa-pencil"></i>'.html_safe, edit_license_path(:id=>lic, :school_id=>lic.school_id), :remote=>true %> 
 								<%end%>
 								<% if can? :destroy, :licenses %> 
-						            <%= link_to '<i title="Archive License" class="glyphicon glyphicon-trash"></i>'.html_safe, lic, method: :delete, data: { confirm: 'Are you sure?' }, :remote=>true %>	
+						            <%= link_to '<i title="Archive License" class="glyphicon glyphicon-trash"></i>'.html_safe, lic, method: :delete, data: { confirm: "Are you sure you want to archive license: #{lic.license_batch_name} ?", dismiss: "modal"}, :remote=>true%>	
 								<%end%>					
-			               </td> 
-				       </tr>
-			       <% end %> 
-               </tbody>
-           </table>
-	    
-	   <div data-no-turbolink>
-	   <%= paginate @licenses %>
-	   </div>
-	   </div>
+			                </td> 
+				        </tr>
+			        <% end %> 
+                </tbody>
+            </table>
+	    <div data-no-turbolink>
+	        <%= paginate @licenses %>
+	    </div>
+	    </div>
     </div>	
 </div>
 
