css for all confirm boxes

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -168,3 +168,6 @@ hr.school-heading-hr{margin-top: 21px;}
 .class_licenses{width: 400px !important}
 
 .modal-footer.modal-footer-top{margin-top:0 !important;}
+
+.pop-up-message1{font-size: 18px;font-weight: bolder;}
+.pop-up-message2{font-size: 15px;font-weight: normal;letter-spacing: 0.03em;}
