--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -19,7 +19,7 @@
 			<%#= link_to 'Un-archive', un_archive_school_list_schools_path, :class=>"btn btn-success btn-xs" %>
 			<% if can? :destroy, :schools %> 
 				<%#= submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
-				<%= link_to 'Archive', delete_school_schools_path(:archive=>true), method: :post, :class=>"btn btn-success btn-xs delete-school-list", data: { confirm: 'Are you sure you want to archive selected Schools?' }, :disabled => true %>
+				<%= link_to 'Archive', delete_school_schools_path(:archive=>true), method: :post, :class=>"btn btn-success btn-xs delete-school-list", data: { confirm: 'Are you sure you want to archive selected schools?' }, :disabled => true, confirm_text: "" %>
 		 	<%end%>
 		</div>
 		<div class="loader"><%= image_tag("loader5.gif")%></div>
@@ -64,7 +64,7 @@
 						    	<%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %>  
 						    <%end%>
 					   	    <% if can? :destroy, :schools %> 
-						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: "Are you sure you want to archive school: #{school.name} ?" } %> 
+						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: "Are you sure you want to archive school: #{school.name} ?" }, confirm_text: "" %> 
 					      	<%end%>
 							<% if can? :create, :licenses %> 
 							   <%= link_to '<i title="Add License" class="btg btg-lisence"></i>'.html_safe, new_license_path(:school_id=>school)%> 
