student info page lic icons added

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -174,3 +174,4 @@ hr.school-heading-hr{margin-top: 21px;}
 
 .panel-footer{padding:10px !important;}
 .panel-body.panel-body-padding {padding: 10px !important;}
+.student-info-lic-icons{margin-left: 10px}
