--- a/app/views/classrooms/import_list.html.erb
+++ b/app/views/classrooms/import_list.html.erb
@@ -8,3 +8,11 @@
 		<% end %>
 	</div>
 </div>	
+
+<script type="text/javascript">
+    showHideMenu('li_school');	
+
+	<% unless current_user.is_web_admin?%>
+	  showHideMenu('li_options');	
+	<%end%>
+</script>	
