--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -164,11 +164,11 @@
 							             <%= link_to '<i title="Assign License" class="btg btg-lisence"></i>'.html_safe, '', :class=>"assign_license", data: { toggle: "modal", target: "#myModal", input: user.id}%> 
 						             <% end %>
 								     <% if (can? :remove_license, :users) && params[:role_id].eql?('4') %>
-						                 <%= link_to '<i title="Remove License" class="btg btg-lisence-cancel"></i>'.html_safe, remove_license_users_path(:id=>user.id) , data: { confirm: "Are you sure you want to remove this user's license? "}, confirm_text: "The user will no longer be able to log in to Books That Grow." unless user.license_expiry_date.blank? %>   
+						                 <%= link_to '<i title="Remove License" class="btg btg-lisence-cancel"></i>'.html_safe, remove_license_users_path(:id=>user.id) , method: :get, data: { confirm: "Are you sure you want to remove this user's license? "}, confirm_text: "The user will no longer be able to log in to Books That Grow." unless user.license_expiry_date.blank? %>   
 								     <% end %>
 								 <%else%>
 								     <%= link_to '<i title="Assign License" class="btg btg-lisence"></i>'.html_safe, '', :class=>"assign_license", data: { toggle: "modal", target: "#myModal", input: user.id}%> 
-									 <%= link_to '<i title="Remove License" class="btg btg-lisence-cancel"></i>'.html_safe, remove_license_users_path(:id=>user.id) , data: { confirm: "Are you sure you want to remove this user's license? "}, confirm_text: "The user will no longer be able to log in to Books That Grow." unless user.license_expiry_date.blank? %>  
+									 <%= link_to '<i title="Remove License" class="btg btg-lisence-cancel"></i>'.html_safe, remove_license_users_path(:id=>user.id) , method: :get, data: { confirm: "Are you sure you want to remove this user's license? "}, confirm_text: "The user will no longer be able to log in to Books That Grow." unless user.license_expiry_date.blank? %>  
 						         <%end%>
 							<%else%>
 						        <%= render 'edit_link', user: user%> 
