--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,6 +39,20 @@
 				<address data-no-turbolink>
 			    	<strong>License Expiration Date:</strong>
 			    	<%= @user.license_expiry_date %>
+			    	<% if @role_id.name.eql?('Student')%>
+			    		<%if @user.license.blank?%>
+					    	<% if (can? :get_user_school_licenses, :users) && params[:role_id].eql?('4')  %>
+					    		<%= link_to '<i title="Assign License" class="btg btg-lisence"></i>'.html_safe, '', :class=>"assign_license student-info-lic-icons", data: { toggle: "modal", target: "#myModal", input: @user.id}%> 
+							<% end %>
+					    <%else%>
+					  	   	<% if (can? :get_user_school_licenses, :users) && params[:role_id].eql?('4')  %>
+							    <%= link_to '<i title="Update License" class="btg btg-lisence"></i>'.html_safe, '', :class=>"assign_license student-info-lic-icons", data: { toggle: "modal", target: "#myModal", input: @user.id}%> 
+							<% end %>
+					    <%end%>
+						<% if (can? :remove_license, :users) && params[:role_id].eql?('4') %>
+					    	<%= link_to '<i title="Remove License" class="btg btg-lisence-cancel"></i>'.html_safe, remove_license_users_path(:id=>@user.id), :class=>"" , method: :get, data: { confirm: "Are you sure you want to remove this user's license? "}, confirm_text: "The user will no longer be able to log in to Books That Grow." unless @user.license_expiry_date.blank? %>   
+						<% end %>
+					<% end %>
 			    </address>
 				<%end%>
 				<address>
@@ -69,19 +83,6 @@
 					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id=>@school.id), class: "btn btn-white btn-xs"%>	
 					<% elsif @role_id.name.eql?('Student')%>
 					    <%= link_to 'Change Password', '', :class=>"change_password btn btn-success btn-xs", data: { toggle: "modal", target: "#changePassword", input: @user.id} %>
-					    <%if @user.license.blank?%>
-					    	<% if (can? :get_user_school_licenses, :users) && params[:role_id].eql?('4')  %>
-					    		<%= link_to 'Assign License', '', :class=>"assign_license btn btn-success btn-xs", data: { toggle: "modal", target: "#myModal", input: @user.id}%> 
-							<% end %>
-					    <%else%>
-					  	    <% if (can? :get_user_school_licenses, :users) && params[:role_id].eql?('4')  %>
-							    <%= link_to 'Update License', '', :class=>"assign_license btn btn-success btn-xs", data: { toggle: "modal", target: "#myModal", input: @user.id}%> 
-							<% end %>
-					    <%end%>
-						<% if (can? :remove_license, :users) && params[:role_id].eql?('4') %>
-					    	<%= link_to 'Remove License', remove_license_users_path(:id=>@user.id), :class=>"btn btn-success btn-xs" , data: { confirm: "Are you sure you want to remove this user's license? The user will no longer be able to log in to Books That Grow." } unless @user.license_expiry_date.blank? %>   
-						<% end %>
-
 					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
 					<%end%>
 				</div>
@@ -105,7 +106,7 @@
 </div>	
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-width">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -123,7 +124,7 @@ if( <%= @role_id.name.eql?('Web Admin')%>)
 {
     showHideMenu('li_webadmin');	
 }
-else if(<%= @role_id.name.eql?('School Admin')%>)
+else 
 {
     showHideMenu('li_school');	
 }
