Resolving forgot password image issue

--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -11,7 +11,8 @@
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:10px;">
             <a href="javscript:void(0);" >
-				      <%= image_tag(@user_info[:url] + "/assets/app_icon_60.png")%>
+				      <% image = @user_info[:app_type].blank? ? @user_info[:url] : @user_info[:portal_link]%>
+				      <%= image_tag(image + "/assets/app_icon_60.png")%>
 		      	</a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
