--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -175,3 +175,6 @@ hr.school-heading-hr{margin-top: 21px;}
 .panel-footer{padding:10px !important;}
 .panel-body.panel-body-padding {padding: 10px !important;}
 .student-info-lic-icons{margin-left: 10px}
+
+.grey-effect{color: grey;}
+.grey-effect:hover{color: grey;}
