changes in lic index and edit page. quick edits

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -141,7 +141,7 @@
 				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' } %>
 				    <%#= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' }, :onclick => "return validateForm();"  %>
 				<%end%>	
-				<%= link_to 'Return to Book List', books_path, class: "btn btn-white btn-xs"%>
+				<%= link_to 'Cancel', books_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			<% end %>
 	    </div>
