--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -61,9 +61,9 @@
 				<% if action_name.eql?('new') || action_name.eql?('create') %>
 	                
 			        <%if current_user.role.name.eql?('Web Admin')%>
-					    <%= link_to 'Return to School List', schools_path, class: "btn btn-white btn-xs"%>
+					    <%= link_to 'Cancel', schools_path, class: "btn btn-white btn-xs"%>
 					<%else%>
-					    <%= link_to 'Return to School List', school_path(current_user.school_id), class: "btn btn-white btn-xs"%>
+					    <%= link_to 'Cancel', school_path(current_user.school_id), class: "btn btn-white btn-xs"%>
 					<%end%>
 				<%else%>
 				    <%#= f.submit "Update", class: "btn btn-primary btn-xs", data: { disable_with: 'Saving...' }%>
