--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,13 +25,13 @@
 				<% if action_name.eql?('new') || action_name.eql?('create') %>
 	                <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
 					<% if @role_id.name.eql?('Web Admin')%>
-						<%= link_to 'Return to User List', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
+						<%= link_to 'Cancel', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
 					<% elsif @role_id.name.eql?('School Admin')%>
-					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
 					<% elsif @role_id.name.eql?('Teacher')%>
-					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
 					<% elsif @role_id.name.eql?('Student')%>
-					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
 					<%end%>
 				<% else %>
 				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", :id=>"user_edit", data: { disable_with: 'Updating...' } %>
