--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -91,7 +91,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="changePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="changePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -117,7 +117,7 @@
 	  </div>
     </div>
   </div>
-</div>	
+</div>	 -->
 
 <script type="text/javascript">
 if( <%= @role_id.name.eql?('Web Admin')%>)
@@ -132,26 +132,26 @@ else
 	showHideMenu('li_options');	
 <%end%>
 
-$( ".assign_license" ).click(function() {
-          jQuery.get("<%=url_for(:controller=>'users',:action=>'get_user_school_licenses')%>",{ id : $(this).attr('data-input'), role_id:<%=@role_id.id%>},
-function(data) {
+// $( ".assign_license" ).click(function() {
+//           jQuery.get("<%#=url_for(:controller=>'users',:action=>'get_user_school_licenses')%>",{ id : $(this).attr('data-input'), role_id:<%#=@role_id.id%>},
+// function(data) {
 	         
-             if(data)
-              {
-			   jQuery("#school_licenses_list").html(data);
-             }
-      });
-});
+//              if(data)
+//               {
+// 			   jQuery("#school_licenses_list").html(data);
+//              }
+//       });
+// });
 
 
-$( ".change_password" ).click(function() {
-          jQuery.get("<%=url_for(:controller=>'users',:action=>'change_user_password')%>",{ id : $(this).attr('data-input'), role_id:<%=@role_id.id%>},
-function(data) {
+// $( ".change_password" ).click(function() {
+//           jQuery.get("<%#=url_for(:controller=>'users',:action=>'change_user_password')%>",{ id : $(this).attr('data-input'), role_id:<%#=@role_id.id%>},
+// function(data) {
 	         
-             if(data)
-              {
-			   jQuery("#change_user_password_info").html(data);
-             }
-      });
-});
+//              if(data)
+//               {
+// 			   jQuery("#change_user_password_info").html(data);
+//              }
+//       });
+// });
 </script>
