--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -25,7 +25,7 @@
 		<%= hidden_field_tag(:app_type, @a["a_type"])%>
 		<%= hidden_field_tag(:coupon, @a["coupon"])%>
         <h4 class="nomargin">Reset password</h4>
-        <p class="mt5 mb20">Reset password to login and access your account.</p>
+        <p class="mt5 mb20">Enter a new password and click submit.</p>
 		<%= label_tag 'password_label', "New Password", :class => "form-label"%>
 		<%= password_field_tag 'password', nil, class: "form-control pword", :required=>true %>
 		
