changes in spacing on reset pass screen

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -179,3 +179,5 @@ hr.school-heading-hr{margin-top: 21px;}
 
 .grey-effect{color: grey;}
 .grey-effect:hover{color: grey;}
+
+.signinpanel .form-control{margin-top: 0 !important;}
