--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -26,13 +26,15 @@
 		<%= hidden_field_tag(:coupon, @a["coupon"])%>
         <h4 class="nomargin">Reset password</h4>
         <p class="mt5 mb20">Enter a new password and click submit.</p>
-		<%= label_tag 'password_label', "New Password", :class => "form-label"%>
-		<%= password_field_tag 'password', nil, class: "form-control pword", :required=>true %>
-		
-		<%= label_tag 'password_confirmation_label', "Confirm Password", :class => "form-label" %>
-		<%= password_field_tag 'password_confirmation',nil, class: "form-control pword", :required=>true %>
-		
-		<%= submit_tag "Submit", class: "btn btn-success btn-cons", data: { disable_with: 'Resetting...' }%>
+        <div class="form-group">
+		    <%= label_tag 'password_label', "New Password", :class => "form-label"%>
+		    <%= password_field_tag 'password', nil, class: "form-control pword", :required=>true %>
+		</div>
+        <div class="form-group">
+		    <%= label_tag 'password_confirmation_label', "Confirm Password", :class => "form-label" %>
+		    <%= password_field_tag 'password_confirmation',nil, class: "form-control pword", :required=>true %>
+		</div>
+        <%= submit_tag "Submit", class: "btn btn-success btn-cons", data: { disable_with: 'Resetting...' }%>
 		
    <% end %>
 </div>
