--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -8,6 +8,7 @@
   <!-- <link rel="shortcut icon" href="images/favicon.png" type="image/png"> -->
 
   <title>Books That Grow</title>
+  <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag "bootstrap.min.css" %>
 
   <%= stylesheet_link_tag "style.css" %>
