--- a/app/views/users/reset.html.erb
+++ b/app/views/users/reset.html.erb
@@ -1,1 +1,8 @@
-<h3>You password has been reset</h3>
+<div class="logopanel">
+    <h1><span>[</span> Books That Grow<span>]</span></h1>
+	<%= image_tag("app_icon.png", :class=>"logo_image")%>
+	<h3>You password has been reset</h3>
+	<h4>Click <a href = '<%= params[:path] %>'>here</a> to log in to Books That Grow</h4>
+</div>
+
+
