added new page for resetr

--- a/app/views/users/reset.html.erb
+++ b/app/views/users/reset.html.erb
@@ -1,4 +1,4 @@
-<div class="logopanel">
+<div class="logopanel reset-text">
     <h1><span>[</span> Books That Grow<span>]</span></h1>
 	<%= image_tag("app_icon.png", :class=>"logo_image")%>
 	<h3>You password has been reset</h3>
