--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -181,3 +181,4 @@ hr.school-heading-hr{margin-top: 21px;}
 .grey-effect:hover{color: grey;}
 
 .signinpanel .form-control{margin-top: 0 !important;}
+.reset-text{text-align: center;}
